Initial NWDAF. Configuration. serviceNameList

--- a/config/free5GC.conf
+++ b/config/free5GC.conf
@@ -34,6 +34,9 @@ logger:
   N3IWF:
     debugLevel: info
     ReportCaller: false
+  NWDAF:
+    debugLevel: info
+    ReportCaller: false
 # library
   NAS:
     debugLevel: info
